--- a/defense-core/pom.xml
+++ b/defense-core/pom.xml
@@ -44,6 +44,12 @@
 			<version>1.18.30</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>29.0-jre</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
